--- a/NN_EXERCISE.ipynb
+++ b/NN_EXERCISE.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN9ZtmOzM+QcL8/icSsrA1s",
+      "authorship_tag": "ABX9TyPhYL223U9WKGdBXajJr2w7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -276,7 +276,7 @@
       "cell_type": "markdown",
       "source": [
         "# Homeworks\n",
-        "<❄️ = difficulty>\n",
+        "[❄️ = difficulty]\n",
         "\n",
         "For **NN EXERCISE notebook**:\n",
         "* ❄️ quadratic fitting layer $y = ax^2 + bx + c$\n",
@@ -285,7 +285,7 @@
         "* ❄️ There are 3-4 mistakes within the notebook, try to find it and get test accuracy to 91%\n",
         "* ❄️ Replace Relu with Sigmoid, which is better?\n",
         "* ❄️❄️ Implement **Mean Square Error(MSE)**, does it improve our model or not?\n",
-        "* ❄️❄️❄️ Implement a FullyConnectedNN class for arbitrary layers of Neural Network. Hint: Use lists to keep track of W_i, B_i, dW_i, dB_i, dZ_i"
+        "* ❄️❄️❄️ Implement a FullyConnectedNN class for arbitrary layers of Neural Network. Hint: Use lists to keep track of W_i, B_i, dW_i, dB_i, dZ_i of ith layer"
       ],
       "metadata": {
         "id": "0Dyfuxx1AwMt"
@@ -294,7 +294,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Ending remarks\n"
+        "# Ending remarks\n",
+        "The homework is not mandatory, but it is strongly encouraged to help reinforce the concepts you’ve learned so far. You are also welcome to share your solutions with the rest of the book club before Part 2 of our bootcamp begins—this is a great opportunity to collaborate, exchange ideas, and get feedback. Have fun with the exercises, and don’t be afraid to experiment with different approaches.\n",
+        "\n",
+        "Looking forward to seeing your progress, and excited to dive into Part 2 together! Happy coding! 🚀"
       ],
       "metadata": {
         "id": "zFZvMC4pBx7l"
@@ -304,7 +307,12 @@
       "cell_type": "markdown",
       "source": [
         "# Teaser for Part 2\n",
-        "In Part 2, we’ll level up! Get ready to:"
+        "Now that we are familiar with the theoretical foundations, in Part 2, we’ll level up! Get ready to:\n",
+        "* Learn about basics for pytorch\n",
+        "* Build a chess bot with a simple neural network\n",
+        "* How to interact with other codebase\n",
+        "* Learn about API\n",
+        "* Deploy the chess bot on https://lichess.org/ and play!"
       ],
       "metadata": {
         "id": "NsyJzauULsnw"
@@ -314,7 +322,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "mrVAvKFcBuU-"
+        "id": "Df3IYDEJNWxd"
       },
       "execution_count": null,
       "outputs": []
