--- a/MNIST_digit_recognizer.ipynb
+++ b/MNIST_digit_recognizer.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNAzwNIodj4dwrCjGFam/pQ",
+      "authorship_tag": "ABX9TyNXyzA5Wf+eK7q5iQsOx0AK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,64 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "Roq6PtCI22yN"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "from matplotlib import pyplot as plt\n",
+        "\n",
+        "data = pd.read_csv('sample_data/mnist_train_small.csv')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = np.array(data)\n",
+        "m, n = data.shape\n",
+        "print(m,n)\n",
+        "np.random.shuffle(data) # shuffle before splitting into dev and training sets\n",
+        "\n",
+        "data_dev = data[0:1000].T\n",
+        "Y_dev = data_dev[0]\n",
+        "X_dev = data_dev[1:n]\n",
+        "X_dev = X_dev / 255.\n",
+        "\n",
+        "data_train = data[1000:m].T\n",
+        "Y_train = data_train[0]\n",
+        "X_train = data_train[1:n]\n",
+        "X_train = X_train / 255.\n",
+        "_,m_train = X_train.shape"
+      ],
+      "metadata": {
+        "id": "jA_mnm9y7j-E",
+        "outputId": "b97e7145-34d2-43aa-b1f1-7bb5c2ab360d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "19999 785\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "pS6SIaDA9LkT"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
