--- a/MNIST_digit_recognizer.ipynb
+++ b/MNIST_digit_recognizer.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPkpMGlo0NR3peJfX5bgaCX",
+      "authorship_tag": "ABX9TyPvScD8DRvw0hHEgoS3FCFE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,12 +44,14 @@
     {
       "cell_type": "code",
       "source": [
+        "from re import X\n",
         "data = np.array(data)\n",
         "m, n = data.shape\n",
         "print(m,n)\n",
         "np.random.shuffle(data) # shuffle before splitting into dev and training sets\n",
         "\n",
         "data_dev = data[0:1000].T\n",
+        "\n",
         "Y_dev = data_dev[0]\n",
         "X_dev = data_dev[1:n]\n",
         "X_dev = X_dev / 255.\n",
@@ -58,22 +60,27 @@
         "Y_train = data_train[0]\n",
         "X_train = data_train[1:n]\n",
         "X_train = X_train / 255.\n",
-        "_,m_train = X_train.shape"
+        "_,m_train = X_train.shape\n",
+        "\n",
+        "print(data_train.shape)\n",
+        "print(X_train.shape)"
       ],
       "metadata": {
         "id": "jA_mnm9y7j-E",
-        "outputId": "34aef7e1-44db-463f-d9ab-4004ba615702",
+        "outputId": "b956a9f4-c7cf-4685-eef8-0b05be61aebb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "19999 785\n"
+            "19999 785\n",
+            "(785, 18999)\n",
+            "(784, 18999)\n"
           ]
         }
       ]
@@ -81,9 +88,25 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
+        "* ${X_j}= [784\\times m]$ where $m$ is the number of training dataset.\n",
+        "* ${Y_j}= [10\\times m]$ where $m$ is the number of training dataset.\n",
+        "\n",
+        "First layer\n",
+        "* $W^{[1]}_{ij}= [10\\times 784]$\n",
+        "* $B^{[1]}_i = [10\\times 1]$\n",
+        "* ${Z^{[1]}_i}= [10\\times m]$\n",
+        "* ${A^{[1]}_i}= [10\\times m]$\n",
+        "\n",
+        "Second layer\n",
+        "* $W^{[2]}_{ij}= [10\\times10]$\n",
+        "* $B^{[2]}_i = [10\\times 1]$\n",
+        "* ${Z^{[2]}_i}= [10\\times m]$\n",
+        "* ${A^{[2]}_i}= [10\\times m]$\n",
+        "\n",
         "Forward propagation:\n",
         "\\begin{align}\n",
-        "Z^{[1]}_i &= \\sum_j^N W^{[1]}_{ij}x_j+B^{[1]}_i \\\\\n",
+        "Z^{[1]}_i &= \\sum_j^{784} W^{[1]}_{ij}X_j+B^{[1]}_i \\\\\n",
         "A^{[1]}_i &= \\text{ReLU} (Z^{[1]}_i) \\\\\n",
         "Z^{[2]}_i &= \\sum_j^{10} W^{[2]}_{ij}A^{[1]}_j+B^{[2]}_i \\\\\n",
         "A^{[2]}_i &= \\text{softmax} (\\{Z^{[2]}_i\\}) \\\\\n",
@@ -108,11 +131,42 @@
         "&=-{Y_j}+ A^{[2]}_j\n",
         "\\end{align}\n",
         "(Note that $\\sum {Y_i}=1$)\n",
+        "so $\\delta Z^{[2]}=A^{[2]} -Y$.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "> Questions: Why we average over the training data to build $\\delta W^{[2]}$ here?\n",
         "\n",
         "\n",
         "\\begin{align}\n",
-        "\\frac{\\partial\\mathcal{L}}{\\partial W^{[2]}_{ij}}=\\frac{\\partial\\mathcal{L}}{\\partial Z^{[2]}_i}\\frac{\\partial Z^{[2]}_i}{\\partial W^{[2]}_{ij}}\n",
-        "\\end{align}"
+        "\\frac{\\partial Z^{[2]}_i}{\\partial W^{[2]}_{ij}}&=A^{[1]}_j\\\\\n",
+        "\\frac{\\partial\\mathcal{L}}{\\partial W^{[2]}_{ij}}&=\\frac{\\partial\\mathcal{L}}{\\partial Z^{[2]}_i}\\frac{\\partial Z^{[2]}_i}{\\partial W^{[2]}_{ij}}\\\\\n",
+        "&=(-{Y_i}+ A^{[2]}_i)\\cdot A^{[1]}_j\n",
+        "\\end{align}\n",
+        "so $\\delta W^{[2]}=\\frac{1}{m} \\delta Z^{[2]}\\cdot A^{[1]T}$\n",
+        "\n",
+        "\\begin{align}\n",
+        "\\frac{\\partial Z^{[2]}_i}{\\partial B^{[2]}_{j}}&=\\delta_{ij}\\\\\n",
+        "\\frac{\\partial\\mathcal{L}}{\\partial B^{[2]}_{i}}&=\\frac{\\partial\\mathcal{L}}{\\partial Z^{[2]}_i}\\frac{\\partial Z^{[2]}_i}{\\partial B^{[2]}_{i}}\\\\\n",
+        "&=-{Y_i}+ A^{[2]}_i\n",
+        "\\end{align}\n",
+        "so $\\delta B^{[2]}=\\frac{1}{m}\\sum \\delta Z^{[2]}$.\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\\begin{align}\n",
+        "\\frac{\\partial Z^{[2]}_j}{\\partial A^{[1]}_k}&=W^{[2]}_{jk}\\\\\n",
+        "\\frac{\\partial A^{[1]}_k}{\\partial Z^{[1]}_k}&=\\Theta(Z^{[1]}_k)\\\\\n",
+        "\\end{align}\n",
+        "\n",
+        "\\begin{align}\n",
+        "\\frac{\\partial\\mathcal{L}}{\\partial Z^{[1]}_k}&=\\sum_{j}\\frac{\\partial\\mathcal{L}}{\\partial Z^{[2]}_j}\\frac{\\partial Z^{[2]}_j}{\\partial A^{[1]}_k}\\frac{\\partial A^{[1]}_k}{\\partial Z^{[1]}_k}\\\\\n",
+        "&=\\sum_{j}(-{Y_j}+ A^{[2]}_j)W^{[2]}_{jk}\\Theta(Z^{[1]}_k)\n",
+        "\\end{align}\n",
+        "Note that $\\sum_j$ is inner product and the $k$ index is element-wise muliplication. So $\\delta Z^{[1]} = W^{[2]T}\\cdot\\delta Z^{[2]} * \\Theta(Z^{[1]})$\n",
+        "\n",
+        "\n",
+        "Since $Z$ in the first second layers are both linear, we have $\\delta W^{[1]}=\\frac{1}{m} \\delta Z^{[1]}\\cdot A^{[0]T}$ where $A^{[0]}\\equiv X$ and $\\delta B^{[1]}=\\frac{1}{m}\\sum \\delta Z^{[1]}$."
       ],
       "metadata": {
         "id": "47wDSEmsuvhG"
@@ -171,7 +225,7 @@
       "metadata": {
         "id": "pS6SIaDA9LkT"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -185,7 +239,7 @@
       "metadata": {
         "id": "6SMJnRC698xH"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -213,7 +267,7 @@
       "metadata": {
         "id": "28a-y3Vx9ekV"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -228,7 +282,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
